force-app/main/default/objects/Expense__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <description>Category of the expense, either discretionary or nondiscretionary.</description>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Car &amp; Renter&apos;s Insurance</fullName>
            </value>
            <value>
                <fullName>Car Payment</fullName>
            </value>
            <value>
                <fullName>Carwash Subscription</fullName>
            </value>
            <value>
                <fullName>Groceries &amp; Gas</fullName>
            </value>
            <value>
                <fullName>Necessary Life Supplies</fullName>
            </value>
            <value>
                <fullName>Nonnegotiable Unpredictables</fullName>
            </value>
            <value>
                <fullName>Phone Payment to Dad</fullName>
            </value>
            <value>
                <fullName>Rent &amp; Utilities</fullName>
            </value>
            <value>
                <fullName>Internet</fullName>
            </value>
            <value>
                <fullName>Student Loan Payback to Dad</fullName>
            </value>
            <value>
                <fullName>YMCA Subscription</fullName>
            </value>
            <value>
                <fullName>Food &amp; Leisure</fullName>
            </value>
            <value>
                <fullName>Giftgiving</fullName>
            </value>
            <value>
                <fullName>Products &amp; Merchandise</fullName>
            </value>
            <value>
                <fullName>Recreation</fullName>
            </value>
            <value>
                <fullName>Charitable Giving</fullName>
            </value>
            <value>
                <fullName>Vacationing/Travel</fullName>
            </value>
            <value>
                <fullName>Parking &amp; Scooters</fullName>
            </value>
            <value>
                <fullName>Pet Expenses</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>