force-app/main/default/objects/Expense__c/fields/Establishment__c.field-meta.xml
<CustomField>
    <fullName>Establishment__c</fullName>
    <description>The establishment where the expense was made.</description>
    <label>Establishment</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Aldi</fullName>
            </value>
            <value>
                <fullName>Costco</fullName>
            </value>
            <value>
                <fullName>Cox</fullName>
            </value>
            <value>
                <fullName>Dubliner Pub</fullName>
            </value>
            <value>
                <fullName>Harney Street Tavern</fullName>
            </value>
            <value>
                <fullName>Joslyn Lofts</fullName>
            </value>
            <value>
                <fullName>Papa John&apos;s</fullName>
            </value>
            <value>
                <fullName>ParkOmaha</fullName>
            </value>
            <value>
                <fullName>Russell Speeder&apos;s</fullName>
            </value>
            <value>
                <fullName>Sozo</fullName>
            </value>
            <value>
                <fullName>Sweetwater</fullName>
            </value>
            <value>
                <fullName>Target</fullName>
            </value>
            <value>
                <fullName>YMCA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>