force-app/main/default/objects/Expense__c/fields/Expecting_Reimbursement__c.field-meta.xml
<CustomField>
    <fullName>Expecting_Reimbursement__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Marked as true if a reimbursement is expected for the expense.</description>
    <label>Expecting Reimbursement</label>
    <type>Checkbox</type>
</CustomField>