force-app/main/default/objects/Expense__c/fields/FiscalMonth__c.field-meta.xml
<CustomField>
    <fullName>FiscalMonth__c</fullName>
    <formula>IF(
  Month(Date__c) &lt; 10,
  TEXT(YEAR(Date__c))&amp;&quot;-0&quot;&amp;TEXT(MONTH(Date__c)),
  TEXT(YEAR(Date__c))&amp;&quot;-&quot;&amp;TEXT(MONTH(Date__c))
)</formula>
    <label>FiscalMonth</label>
    <type>Text</type>
</CustomField>