force-app/main/default/objects/Expense__c/fields/Method__c.field-meta.xml
<CustomField>
    <fullName>Method__c</fullName>
    <label>Method</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cash</fullName>
            </value>
            <value>
                <fullName>Check</fullName>
            </value>
            <value>
                <fullName>Credit Card</fullName>
            </value>
            <value>
                <fullName>Online Payment</fullName>
            </value>
            <value>
                <fullName>Venmo Transfer</fullName>
            </value>
            <value>
                <fullName>Zelle Transfer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>