force-app/main/default/objects/Expense__c/fields/Recurring__c.field-meta.xml
<CustomField>
    <fullName>Recurring__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Marked true if the expense is one that is recurring or regularly scheduled.</description>
    <label>Recurring</label>
    <type>Checkbox</type>
</CustomField>