force-app/main/default/objects/Expense__c/fields/Reflected_Online__c.field-meta.xml
<CustomField>
    <fullName>Reflected_Online__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Marked as true if the expense can be seen reflected on the statement/balance for the corresponding live account.</description>
    <label>Reflected Online</label>
    <type>Checkbox</type>
</CustomField>