force-app/main/default/objects/Expense__c/fields/Subject__c.field-meta.xml
<CustomField>
    <fullName>Subject__c</fullName>
    <description>Give a quick subject/title of the expense.</description>
    <label>Subject</label>
    <length>255</length>
    <type>Text</type>
</CustomField>