force-app/main/default/objects/Expense__c/recordTypes/Discretionary.recordType-meta.xml
<RecordType>
    <fullName>Discretionary</fullName>
    <active>true</active>
    <description>A voluntary expense.</description>
    <label>Discretionary</label>
</RecordType>