force-app/main/default/objects/Expense__c/recordTypes/Nondiscretionary.recordType-meta.xml
<RecordType>
    <fullName>Nondiscretionary</fullName>
    <active>true</active>
    <description>An involuntary, necessary expense.</description>
    <label>Nondiscretionary</label>
</RecordType>