force-app/main/default/objects/Expense__c/listViews/Card_Expenses.listView-meta.xml
<ListView>
    <fullName>Card_Expenses</fullName>
    <columns>NAME</columns>
    <columns>Date__c</columns>
    <columns>Amount__c</columns>
    <columns>Account_Name__c</columns>
    <columns>Subject__c</columns>
    <columns>RECORDTYPE</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Method__c</field>
        <operation>equals</operation>
        <value>Credit Card</value>
    </filters>
    <label>Card Expenses</label>
</ListView>