force-app/main/default/objects/Expense__c/listViews/Cash_Expenses.listView-meta.xml
<ListView>
    <fullName>Cash_Expenses</fullName>
    <columns>NAME</columns>
    <columns>Date__c</columns>
    <columns>Amount__c</columns>
    <columns>Subject__c</columns>
    <columns>RECORDTYPE</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Method__c</field>
        <operation>equals</operation>
        <value>Cash</value>
    </filters>
    <label>Cash Expenses</label>
</ListView>