force-app/main/default/objects/Expense__c/listViews/Digital_Expenses.listView-meta.xml
<ListView>
    <fullName>Digital_Expenses</fullName>
    <columns>NAME</columns>
    <columns>Date__c</columns>
    <columns>Account_Name__c</columns>
    <columns>Amount__c</columns>
    <columns>Subject__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Method__c</field>
        <operation>equals</operation>
        <value>Online Payment,Venmo Transfer,Zelle Transfer</value>
    </filters>
    <label>Digital Expenses</label>
</ListView>