force-app/main/default/objects/Expense__c/listViews/Recurring_Expenses.listView-meta.xml
<ListView>
    <fullName>Recurring_Expenses</fullName>
    <columns>NAME</columns>
    <columns>Date__c</columns>
    <columns>Amount__c</columns>
    <columns>Subject__c</columns>
    <columns>Account_Name__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Recurring__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Recurring Expenses</label>
</ListView>